INCLUDES        = @ALL_INC@ 

SUBDIRS = classifier 

lib_LIBRARIES = libcvip.a liblearutil.a libcmdline.a 

libcmdline_a_SOURCES      = cmdline.cpp 

libcvip_a_SOURCES         = densegrid.cpp colorconversion.cpp iprocessor.cpp \
			    rhogdense.cpp windescriptor.cpp scalepyramid.h imageslider.h windetect.cpp  

liblearutil_a_SOURCES     = util.cpp fileheader.cpp \
			    fileutil.cpp customoption.cpp \
			    painter.cpp imageio.cpp pimage.cpp imageutil.cpp 
