include_HEADERS = \
	histprocessor.h \
	detectinfo.h \
	simpledetectinfo.h \
	processresult.h \
	ppresult.h \
	resultholder.h \
	th_processresult.h \
	ss_processresult.h \
	ms_processresult.h \
	hist_processresult.h \
	score_processresult.h \
	scorelist_processresult.h \
	markimage.h \
	aligninimage.h \
	list_ppresult.h \
	hard_ppresult.h 
