include_HEADERS = \
	    histogram.h \
	    dhistogram.h \
	    phistogram.h \
	    edge.h \
	    transfunc.h \
	    interpolate.h \
	    interpolateposition.h \
	    meanshift.h \
	    imageslider.h \
	    scalepyramid.h \
	    iprocessor.h \
	    dnormalizer.h \
	    densegrid.h \
	    rhogdense.h \
	    windescriptor.h \
	    cachedesc.h 
